Diagrama de clases

--- a/4º Año/Metodologia de Sistemas II/Unidad 3/3. UML segun Martin Fowler.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/3. UML segun Martin Fowler.md
@@ -73,3 +73,15 @@ Los diagramas de estado son efectivos para describir el comportamiento de un obj
 No todos encuentran los diagramas de estado intuitivos. Es importante observar cómo las personas interactúan con ellos. Puede ser que en su equipo no encuentren útiles los diagramas de estado para su forma de trabajar. Esto no representa un gran problema; como siempre, es esencial utilizar la combinación de técnicas que mejor se adapte a sus necesidades.
 
 Si decide utilizar diagramas de estado, evite hacerlo para cada clase en el sistema. Aunque este enfoque es frecuentemente adoptado por aquellos que prefieren un alto nivel de detalle, generalmente resulta en una pérdida de esfuerzo. Utilice diagramas de estado sólo para aquellas clases que muestran un comportamiento interesante y cuya representación en un diagrama de estado contribuya a entender mejor lo que está sucediendo. Muchas personas descubren que los objetos de interfaz de usuario y control son especialmente aptos para ser representados con un diagrama de estado.
+### Diagrama de clases
+
+El diagrama de clases es no solo uno de los más utilizados en UML, sino también el que abarca la mayor variedad de conceptos de modelado. Aunque los elementos básicos son esenciales para todos, los conceptos más avanzados se utilizan con menos frecuencia.
+
+Un diagrama de clases describe los tipos de objetos en el sistema y las diversas relaciones estáticas que existen entre ellos. Estos diagramas también muestran las propiedades y operaciones de una clase, así como las restricciones aplicadas a cómo los objetos están conectados. UML utiliza el término "característica" para englobar tanto propiedades como operaciones de una clase. Los diagramas de clases son fundamentales en UML, por lo que se usan constantemente.
+
+El desafío con los diagramas de clase es que son tan ricos en detalles que pueden ser abrumadores. Aquí algunos consejos:
+- No intentes usar todas las anotaciones disponibles de inmediato. Comienza con los conceptos simples de este capítulo: clases, asociaciones, atributos, generalizaciones y restricciones.
+- He encontrado que los diagramas de clases conceptuales son muy útiles para explorar el lenguaje de un negocio. Para que esto funcione, debes esforzarte por mantener la discusión alejada del software y usar una notación muy simple.
+- No dibujes modelos para todo; en su lugar, concéntrate en las áreas clave. Es mejor tener unos pocos diagramas actualizados y utilizados que muchos modelos obsoletos y olvidados.
+
+El mayor peligro con los diagramas de clases es que puedes centrarte exclusivamente en la estructura, ignorando el comportamiento. Por lo tanto, al elaborar diagramas de clases para entender el software, siempre hazlo en conjunto con alguna técnica de modelado de comportamiento. Si haces esto, encontrarás que intercambias entre técnicas con frecuencia.
