Diagrama de objetos

--- a/4º Año/Metodologia de Sistemas II/Unidad 3/3. UML segun Martin Fowler.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/3. UML segun Martin Fowler.md
@@ -85,3 +85,11 @@ El desafío con los diagramas de clase es que son tan ricos en detalles que pued
 - No dibujes modelos para todo; en su lugar, concéntrate en las áreas clave. Es mejor tener unos pocos diagramas actualizados y utilizados que muchos modelos obsoletos y olvidados.
 
 El mayor peligro con los diagramas de clases es que puedes centrarte exclusivamente en la estructura, ignorando el comportamiento. Por lo tanto, al elaborar diagramas de clases para entender el software, siempre hazlo en conjunto con alguna técnica de modelado de comportamiento. Si haces esto, encontrarás que intercambias entre técnicas con frecuencia.
+
+### Diagrama de objetos
+
+Un diagrama de objetos es una instantánea de los objetos en un sistema en un momento específico. Debido a que muestra casos concretos en lugar de clases, a menudo se le denomina diagrama de ejemplo. Se puede utilizar para mostrar cómo se configuran los objetos en un ejemplo específico.
+
+Estrictamente hablando, los elementos de un diagrama de objeto son especificaciones de instancia, no casos reales. Esto se debe a que es aceptable dejar atributos obligatorios sin completar o mostrar especificaciones de instancias de clases abstractas. Por lo tanto, una especificación de instancia puede considerarse como una instancia parcialmente definida. Otra forma de concebir un diagrama de objeto es como un diagrama de comunicación, pero sin mensajes.
+
+Los diagramas de objetos son particularmente útiles para mostrar cómo los objetos están interconectados. Aunque un diagrama de clases puede definir una estructura de manera precisa, dicha estructura puede seguir siendo difícil de visualizar. En estas circunstancias, algunos ejemplos de diagramas de objetos pueden ser esclarecedores y hacer una gran diferencia en la comprensión de la estructura.
