Formateando | MS II

--- a/4º Año/Metodologia de Sistemas II/Unidad 3/3. UML segun Martin Fowler.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/3. UML segun Martin Fowler.md
@@ -26,13 +26,13 @@ La idea es que los modelos sean desarrollados por un diseñador, cuyo trabajo co
 | **Caso de uso**                   | Explicar cómo los usuarios interactúan con el sistema y sus funcionalidades.        |
 Aunque UML proporciona un amplio conjunto de diagramas para definir una aplicación, no abarca todos los diagramas posibles que podrían resultar útiles. En diversas situaciones, puede ser beneficioso emplear otros tipos de diagramas no contemplados en UML, y no debería dudarse en utilizar un diagrama alternativo cuando ningún diagrama de UML se ajuste completamente a las necesidades específicas
 
-### Contenido de los casos de uso
+### Contenido de los Casos de Uso
 
 Los casos de uso son una técnica esencial para capturar los requisitos funcionales de un sistema, describiendo las interacciones típicas entre los usuarios y el sistema, y proporcionando una visión de cómo se utiliza el sistema.
 Aunque los casos de uso son un componente clave de la UML, el estándar solo se centra en el diagrama de casos de uso, que ilustra las relaciones entre diversos casos de uso; sin embargo, el verdadero valor de los casos de uso radica en su contenido textual, mientras que el diagrama en sí es de valor relativamente limitado.
 Cada caso de uso identifica un actor principal, quien interactúa con el sistema para obtener un servicio. Este actor principal es el objetivo del caso de uso y, generalmente, pero no siempre, es quien inicia el caso de uso. Pueden existir otros actores, conocidos como actores secundarios, con los que el sistema se comunica para ejecutar el caso de uso.
 Cada paso en un caso de uso refleja un elemento de la interacción entre un actor y el sistema. Estos pasos deben ser declaraciones sencillas que clarifiquen quién realiza la acción, mostrando la intención del actor más que la mecánica de sus acciones. Por esta razón, la interfaz de usuario no se describe dentro del caso de uso; de hecho, la redacción de los casos de uso generalmente precede al diseño de la interfaz de usuario.
-#### Diagrama de casos de uso
+#### Diagrama de Casos de Uso
 
 El UML no establece especificaciones sobre el contenido de un caso de uso, pero proporciona un formato de diagrama para representarlos. Aunque estos diagramas pueden ser útiles, no son obligatorios. En la elaboración de casos de uso, es aconsejable no invertir demasiado esfuerzo en el diagrama en sí; en cambio, el foco debe estar en el contenido textual de los casos de uso.
 UML también incluye otras relaciones entre casos de uso, además de la simple inclusión, como "*extend*". Sin embargo, se recomienda no prestarles demasiada atención, ya que puede generar confusión y perdidas de tiempo dentro del equipo de desarrollo. Es más beneficioso concentrarse en la descripción textual de un caso de uso, ya que ahí reside el verdadero valor de esta técnica.
@@ -53,7 +53,7 @@ Frecuentemente, he visto cómo se utilizan los diagramas de actividad para descr
 Los diagramas de actividad te indican lo que sucede, pero no especifican quién realiza cada acción. En el ámbito de la programación, esto significa que el diagrama no clarifica qué clase es responsable de cada acción. Esto no es necesariamente un problema, ya que a menudo es más útil centrarse en qué se hace, en lugar de quién realiza cada parte de la tarea. Si necesitas mostrar quién hace qué, puedes dividir un diagrama de actividad en "*particiones*", que demuestran las acciones que realiza una unidad de clase u organización.
 Con los diagramas de actividad, a menudo nos encontramos con situaciones donde la salida de una acción desencadena múltiples invocaciones de otra acción. Hay varias maneras de mostrar esto, pero la mejor forma es utilizar una "región de expansión" (expansion region en inglés). Una región de expansión marca un área del diagrama de actividad donde las acciones se ejecutan una vez por cada elemento de una colección.
 
-### Diagrama de secuencias
+### Diagrama de Secuencias
 
 Los diagramas de interacción describen cómo grupos de objetos colaboran en comportamientos específicos. Dentro de UML, existen varias formas de diagramas de interacción, siendo el diagrama de secuencia el más común.
 Un diagrama de secuencia captura el comportamiento de un escenario único, mostrando una serie de objetos y los mensajes que se intercambian entre ellos dentro de un caso de uso. Este diagrama es excelente para visualizar las interacciones y procesamientos que realizan los participantes.
@@ -62,34 +62,25 @@ Otras formas útiles de los diagramas de interacción incluyen los diagramas de 
 ### Diagrama de Colaboraciones
 Este texto no corresponde a un diagrama oficial en UML 2. UML sugiere que se puede usar la notación de "colaboración ocurrencia" para mostrar el uso de patrones, aunque casi ningún autor de patrones ha adoptado este enfoque. Las colaboraciones han existido desde UML 1, pero debo admitir que raramente las he utilizado, incluso al escribir patrones. Las colaboraciones ofrecen una manera de agrupar trozos de comportamiento interactivo cuando diferentes clases desempeñan roles específicos. Sin embargo, en la práctica, no he encontrado que sean un tipo de diagrama particularmente convincente.
 
-### Diagrama de estado
+### Diagrama de Estado
 
-Los diagramas de máquina de estados son una técnica consolidada para describir el comportamiento de un sistema. Diversas formas de diagramas de estado han existido desde la década de 1960, y los enfoques orientados a objetos los han adoptado para mostrar el comportamiento de objetos individuales. En estos enfoques, se dibuja un diagrama de máquina de estado para una sola clase para mostrar el comportamiento a lo largo de toda la vida de un objeto.
-
-Cuando los desarrolladores hablan de "estados" de objetos, a menudo se refieren a la situación de los objetos en términos de la combinación de todos los datos en los campos de los objetos. Sin embargo, el "estado" en un diagrama de máquina de estado representa una noción más abstracta; diferentes estados implican diferentes maneras de reaccionar a los eventos.
-
-Los diagramas de estado son efectivos para describir el comportamiento de un objeto a través de varios casos de uso. No obstante, no son muy buenos para describir comportamientos que involucran a una serie de objetos colaborando. Por lo tanto, es útil combinar los diagramas de estado con otras técnicas. Por ejemplo, los diagramas de interacción son útiles para describir el comportamiento de varios objetos en un solo caso de uso, y los diagramas de actividad son adecuados para mostrar la secuencia general de actividades de varios objetos y casos de uso.
-
-No todos encuentran los diagramas de estado intuitivos. Es importante observar cómo las personas interactúan con ellos. Puede ser que en su equipo no encuentren útiles los diagramas de estado para su forma de trabajar. Esto no representa un gran problema; como siempre, es esencial utilizar la combinación de técnicas que mejor se adapte a sus necesidades.
-
-Si decide utilizar diagramas de estado, evite hacerlo para cada clase en el sistema. Aunque este enfoque es frecuentemente adoptado por aquellos que prefieren un alto nivel de detalle, generalmente resulta en una pérdida de esfuerzo. Utilice diagramas de estado sólo para aquellas clases que muestran un comportamiento interesante y cuya representación en un diagrama de estado contribuya a entender mejor lo que está sucediendo. Muchas personas descubren que los objetos de interfaz de usuario y control son especialmente aptos para ser representados con un diagrama de estado.
-### Diagrama de clases
+Los diagramas de máquina de estados son una técnica consolidada para describir el comportamiento de un sistema. Este diagrama fue adaptado al paradigma orientados a objetos utilizándolo para mostrar el comportamiento de objetos individuales. En estos enfoques, se dibuja un diagrama de máquina de estado para una sola clase para mostrar el comportamiento a lo largo de toda la vida de un objeto. El "estado" en un diagrama de máquina de estado representa una noción abstracta, en la cual diferentes estados implican diferentes maneras de reaccionar a los eventos.
+Los diagramas de estado son efectivos para describir el comportamiento de un objeto a través de varios casos de uso. No obstante, no son muy buenos para describir comportamientos que involucran a una serie de objetos colaborando. Por lo tanto, es útil combinar los diagramas de estado con otras técnicas.
+Si decide utilizar diagramas de estado, evite hacerlo para cada clase en el sistema. Aunque este enfoque es frecuentemente adoptado por aquellos que prefieren un alto nivel de detalle, generalmente resulta en una pérdida de esfuerzo. Utilice diagramas de estado sólo para aquellas clases que muestran un comportamiento interesante y cuya representación en un diagrama de estado contribuya a entender mejor lo que está sucediendo.
+### Diagrama de Clases
 
 El diagrama de clases es no solo uno de los más utilizados en UML, sino también el que abarca la mayor variedad de conceptos de modelado. Aunque los elementos básicos son esenciales para todos, los conceptos más avanzados se utilizan con menos frecuencia.
-
-Un diagrama de clases describe los tipos de objetos en el sistema y las diversas relaciones estáticas que existen entre ellos. Estos diagramas también muestran las propiedades y operaciones de una clase, así como las restricciones aplicadas a cómo los objetos están conectados. UML utiliza el término "característica" para englobar tanto propiedades como operaciones de una clase. Los diagramas de clases son fundamentales en UML, por lo que se usan constantemente.
-
+Un diagrama de clases describe los tipos de objetos en el sistema y las diversas relaciones estáticas que existen entre ellos. Estos diagramas también muestran las propiedades y operaciones de una clase, así como las restricciones aplicadas a cómo los objetos están conectados.
 El desafío con los diagramas de clase es que son tan ricos en detalles que pueden ser abrumadores. Aquí algunos consejos:
+
 - No intentes usar todas las anotaciones disponibles de inmediato. Comienza con los conceptos simples de este capítulo: clases, asociaciones, atributos, generalizaciones y restricciones.
 - He encontrado que los diagramas de clases conceptuales son muy útiles para explorar el lenguaje de un negocio. Para que esto funcione, debes esforzarte por mantener la discusión alejada del software y usar una notación muy simple.
 - No dibujes modelos para todo; en su lugar, concéntrate en las áreas clave. Es mejor tener unos pocos diagramas actualizados y utilizados que muchos modelos obsoletos y olvidados.
 
 El mayor peligro con los diagramas de clases es que puedes centrarte exclusivamente en la estructura, ignorando el comportamiento. Por lo tanto, al elaborar diagramas de clases para entender el software, siempre hazlo en conjunto con alguna técnica de modelado de comportamiento. Si haces esto, encontrarás que intercambias entre técnicas con frecuencia.
 
-### Diagrama de objetos
+### Diagrama de Objetos
 
-Un diagrama de objetos es una instantánea de los objetos en un sistema en un momento específico. Debido a que muestra casos concretos en lugar de clases, a menudo se le denomina diagrama de ejemplo. Se puede utilizar para mostrar cómo se configuran los objetos en un ejemplo específico.
-
+Un diagrama de objetos es una instantánea de los objetos en un sistema en un momento específico. Debido a que muestra casos concretos en lugar de clases. Se puede utilizar para mostrar cómo se configuran los objetos en un ejemplo específico.
 Estrictamente hablando, los elementos de un diagrama de objeto son especificaciones de instancia, no casos reales. Esto se debe a que es aceptable dejar atributos obligatorios sin completar o mostrar especificaciones de instancias de clases abstractas. Por lo tanto, una especificación de instancia puede considerarse como una instancia parcialmente definida. Otra forma de concebir un diagrama de objeto es como un diagrama de comunicación, pero sin mensajes.
-
 Los diagramas de objetos son particularmente útiles para mostrar cómo los objetos están interconectados. Aunque un diagrama de clases puede definir una estructura de manera precisa, dicha estructura puede seguir siendo difícil de visualizar. En estas circunstancias, algunos ejemplos de diagramas de objetos pueden ser esclarecedores y hacer una gran diferencia en la comprensión de la estructura.
