--- a/4º Año/Metodologia de Sistemas II/Unidad 3/4. Proceso Unificado de Racional (RUP).md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/4. Proceso Unificado de Racional (RUP).md
@@ -37,7 +37,7 @@ El RUP presenta 3 características esenciales de todo el proceso de desarrollo:
 
 1. **Dirigido por los casos de uso**: Los casos de uso es una técnica que se utiliza para la captura de requisitos por parte de los clientes/usuarios, se define un caso de uso como un fragmento de funcionalidad del sistema que proporciona al usuario un valor añadido. Estos casos de usos abarcan desde la fase de requerimientos hasta la fase de pruebas.
 2. **Centrado en la arquitectura**: La arquitectura involucra los aspectos estáticos y dinámicos más significativos del sistema, está muy relacionada con la toma de decisiones de cómo debe ser desarrollado el sistema. La arquitectura se ve influenciada por la plataforma de software, sistema operativo, gestor de bases de datos, protocolos, consideraciones de desarrollo como sistemas heredados. Muchas de estas restricciones constituyen requisitos no funcionales del sistema. 
-3. **Ciclo de vida iterativo e incremental**: La apuesta de RUP es dividir trabajo en partes pequeñas o mini proyectos. Permitiendo que el equilibrio entre Casos de Uso y arquitectura se vaya logrando durante cada mini proyecto, así durante todo el proceso de desarrollo. Cada mini proyecto es una iteración.
+3. **Ciclo de vida iterativo e incremental**: La apuesta de RUP es dividir trabajo en partes pequeñas o mini proyectos. Permitiendo que el equilibrio entre casos de uso y arquitectura se vaya logrando durante cada mini proyecto, así durante todo el proceso de desarrollo. Cada mini proyecto es una iteración.
 
 >[!tldr] Artefactos y Roles
 >Los ***artefactos*** son los productos tangibles del proceso como por ejemplo, el modelo de casos de uso, el código fuente, entre otros. Mientras que los ***roles*** son los papeles que desempeñan las personas en un determinado momento, una persona puede desempeñar distintos roles a lo largo del proceso.
