Borrando porqueria y acomodando algunos detalles

--- a/4º Año/Metodologia de Sistemas II/Unidad 3/2. Tipos de Diagramas UML.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/2. Tipos de Diagramas UML.md
@@ -85,7 +85,7 @@ Es usado para mostrar la vida de un objeto determinado a través de todo el sist
 
 ![[ejemplo_estado.png]]
 ## Vista Estructural
-### Diagrama de clases
+### Diagrama de Clases
 
  Un diagrama de clases es un diagrama de estructura estática que describe la estructura de un sistema mostrando las clases del sistema, sus atributos, operaciones, y sus relaciones con otras clases. Es el diagrama más importante en la orientación a objetos, porque constituye la guía para convertir el diseño lógico a código. El diagrama de clases cuenta con los siguientes componentes:
  
