--- a/4º Año/Metodologia de Sistemas II/Unidad 3/3. UML segun Martin Fowler.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 3/3. UML segun Martin Fowler.md
@@ -84,8 +84,8 @@ El mayor peligro con los diagramas de clases es que puedes centrarte exclusivame
 Un diagrama de objetos es una instantánea de los objetos en un sistema en un momento específico. Debido a que muestra casos concretos en lugar de clases. Se puede utilizar para mostrar cómo se configuran los objetos en un ejemplo específico.
 Estrictamente hablando, los elementos de un diagrama de objeto son especificaciones de instancia, no casos reales. Esto se debe a que es aceptable dejar atributos obligatorios sin completar o mostrar especificaciones de instancias de clases abstractas. Por lo tanto, una especificación de instancia puede considerarse como una instancia parcialmente definida. Otra forma de concebir un diagrama de objeto es como un diagrama de comunicación, pero sin mensajes.
 Los diagramas de objetos son particularmente útiles para mostrar cómo los objetos están interconectados. Aunque un diagrama de clases puede definir una estructura de manera precisa, dicha estructura puede seguir siendo difícil de visualizar. En estas circunstancias, algunos ejemplos de diagramas de objetos pueden ser esclarecedores y hacer una gran diferencia en la comprensión de la estructura.
-### Diagrama de componentes
+### Diagrama de Componentes
 
-El aspecto crucial de los componentes es que representan piezas que son adquiribles y actualizables de manera independiente. Por lo tanto, la división de un sistema en componentes es tanto una decisión de marketing como técnica, para lo cual Luke Hohmann ofrece una excelente guía. También es importante recordar tener precaución con los componentes excesivamente detallados, ya que demasiados componentes pueden ser difíciles de gestionar, especialmente cuando surgen problemas de versiones, llevando al conocido "infierno DLL".
-Los componentes en UML no introducen conceptos radicalmente nuevos. Están conectados a través de interfaces implementadas y requeridas, a menudo utilizando la notación de "socket-ball" (enchufe y bola), similar a los diagramas de clase. También es posible descomponer componentes usando diagramas de estructura compuesta.
+El aspecto crucial de los componentes es que representan piezas que son adquiribles y actualizables de manera independiente. También es importante recordar tener precaución con los componentes excesivamente detallados, ya que demasiados componentes pueden ser difíciles de gestionar, especialmente cuando surgen problemas de versiones, llevando al conocido "infierno DLL".
+Los componentes en UML no introducen conceptos radicalmente nuevos. Están conectados a través de interfaces implementadas y requeridas, a menudo utilizando la notación de "socket-ball" (enchufe y bola), similar a los diagramas de clase.
 Utilice diagramas de componentes cuando esté dividiendo el sistema en componentes y desee mostrar sus interrelaciones a través de interfaces o la descomposición de los componentes en estructuras de nivel inferior.
