Se agrego arquitectura de respositorio

--- a/4º Año/Metodologia de Sistemas II/Unidad 4/2. Tipos de Patrones Arquitectonicos.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 4/2. Tipos de Patrones Arquitectonicos.md
@@ -2,11 +2,12 @@ En el desarrollo de sistemas de software, existen varios patrones arquitectónic
 
 1. **Arquitectura por Capas**: La arquitectura por capas ayuda a estructurar aplicaciones que pueden descomponerse en grupos de subtareas. Es extremadamente útil cuando un mismo sistema tiene que encargarse de aspectos de alto y bajo nivel al mismo tiempo. El planteamiento que propone esta arquitectura es dividir el programa en diferentes capas independientes entre si, que abarquen distintos niveles de abstracción, de este modo cada capa podrá brindar interfaces claras y acceder a los servicios de sus capas inferiores. El mejor ejemplo de este patrón arquitectónico es el Modelo TCP/IP utilizado en el ámbito de las redes.
 2. **Arquitectura de Tuberías y Filtros**: La arquitectura de Tuberías y Filtros proporciona una estructura para sistemas que procesan un flujo de datos. Cada paso de procesamiento de estos datos está encapsulado en un componente de filtro. Los datos se pasan a través de tuberías entre filtros adyacentes. La combinación de filtros permite construir familias de sistemas relacionados. Esta arquitectura es la empleada por los Compiladores e Interpretes de los diferentes lenguajes de programación.
-3. **Arquitectura Blackboard**: La arquitectura Blackboard es útil para problemas en  los cuales no se conocen estrategias de solución deterministas, como el procesamiento de voz, imágenes o textos. En Blackboard, varios subsistemas especializados van  ensamblan su conocimiento para construir una solución parcial o aproximada.
+3. **Arquitectura Blackboard**: La arquitectura Blackboard es útil para problemas en los cuales no se conocen estrategias de solución deterministas, como el procesamiento de voz, imágenes o textos. En Blackboard, varios subsistemas especializados van ensamblan su conocimiento para construir una solución parcial o aproximada.
 4. **Arquitectura Broker**: La arquitectura basada en Broker puede utilizarse para estructurar sistemas de software distribuidos utilizando componentes desacoplados que interactúan mediante invocaciones de servicios remotos. Un componente broker es responsable de coordinar la comunicación, el reenvío de solicitudes y la transmitir de los resultados y/o excepciones.
 5. **Arquitectura Modelo-Vista-Controlador**: La arquitectura MVC divide una aplicación interactiva en tres componentes. El modelo contiene la funcionalidad central y los datos. Las vistas muestran información al usuario y los controladores manejan la entrada del usuario. Las vistas y los controladores trabajan de forma conjunta para componer la interfaz de usuario. Minimizando así la complejidad en la actualización de las interfaces gráficas, este patrón arquitectónico es el mas ampliamente utilizado en la actualidad por las páginas Web.
 6. **Arquitectura Presentación-Abstracción-Control**: La arquitectura PAC define una estructura para sistemas de software interactivos en forma de una jerarquía de agentes cooperativos. Cada agente es responsable de un aspecto específico de la funcionalidad de la aplicación y consta de tres componentes: presentación, abstracción y control. Esta subdivisión separa los aspectos de interacción humano-computadora del agente de su núcleo funcional y su comunicación con otros agentes.
-7. **Arquitectura de Microkernel**: La  arquitectura Microkernel se aplica a sistemas de software que deben ser capaces de adaptarse a requisitos del sistema cambiantes. Separa un núcleo funcional mínimo de la funcionalidad extendida y partes específicas del cliente. El microkernel también sirve como un enchufe para conectar estas extensiones y coordinar su colaboración. Esta arquitectura es empleada por motores de videojuegos y sistemas operativos.
-8. **Arquitectura de Reflexión**: La  arquitectura de Reflexión proporciona un mecanismo para cambiar la estructura y el comportamiento de los sistemas de software de manera dinámica. Apoya la modificación de aspectos fundamentales, como estructuras de tipo y mecanismos de llamada a funciones. En este patrón, una aplicación se divide en dos niveles. Un nivel meta que proporciona información sobre propiedades seleccionadas del sistema y hace que el software sea autoconsciente, y un nivel base que incluye la lógica de la aplicación. Su implementación se basa en el nivel meta. Los cambios en la información mantenida en el nivel meta afectan el comportamiento del nivel base subsecuente.
+7. **Arquitectura de Microkernel**: La arquitectura Microkernel se aplica a sistemas de software que deben ser capaces de adaptarse a requisitos del sistema cambiantes. Separa un núcleo funcional mínimo de la funcionalidad extendida y partes específicas del cliente. El microkernel también sirve como un enchufe para conectar estas extensiones y coordinar su colaboración. Esta arquitectura es empleada por motores de videojuegos y sistemas operativos.
+8. **Arquitectura de Reflexión**: La arquitectura de Reflexión proporciona un mecanismo para cambiar la estructura y el comportamiento de los sistemas de software de manera dinámica. Apoya la modificación de aspectos fundamentales, como estructuras de tipo y mecanismos de llamada a funciones. En este patrón, una aplicación se divide en dos niveles. Un nivel meta que proporciona información sobre propiedades seleccionadas del sistema y hace que el software sea autoconsciente, y un nivel base que incluye la lógica de la aplicación. Su implementación se basa en el nivel meta. Los cambios en la información mantenida en el nivel meta afectan el comportamiento del nivel base subsecuente.
+9. **Arquitectura de Repositorio**: Consta de multiples elementos funcionales, denominados agentes, y un instrumento de control denominado pizarra. Los agentes suelen estar especializados en una tarea concreta o elemental. El comportamiento basico de cualquier agente consiste en examinar la pizarra realizar su tarea y escribir sus conclusiones en la misma pizarra. Es util cuando el problema a resolver es extremadamente complejo en terminos cognitivos. Es decir, cuando el flujo de control del algoritmo es enrevesado, o simplemente, no se tiene un conocimiento del completo.
 
 Estos patrones arquitectónicos proporcionan un marco de referencia para diseñadores y desarrolladores, permitiendo la creación de sistemas de software robustos, eficientes y fáciles de mantener. Cada patrón tiene su lugar y utilidad en determinadas situaciones, entender sus fortalezas y limitaciones es clave para implementar la solución más efectiva.
