Patron cliente-servidor

--- a/4º Año/Metodologia de Sistemas II/Unidad 4/2. Tipos de Patrones Arquitectonicos.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 4/2. Tipos de Patrones Arquitectonicos.md
@@ -8,6 +8,7 @@ En el desarrollo de sistemas de software, existen varios patrones arquitectónic
 6. **Arquitectura Presentación-Abstracción-Control**: La arquitectura PAC define una estructura para sistemas de software interactivos en forma de una jerarquía de agentes cooperativos. Cada agente es responsable de un aspecto específico de la funcionalidad de la aplicación y consta de tres componentes: presentación, abstracción y control. Esta subdivisión separa los aspectos de interacción humano-computadora del agente de su núcleo funcional y su comunicación con otros agentes.
 7. **Arquitectura de Microkernel**: La arquitectura Microkernel se aplica a sistemas de software que deben ser capaces de adaptarse a requisitos del sistema cambiantes. Separa un núcleo funcional mínimo de la funcionalidad extendida y partes específicas del cliente. El microkernel también sirve como un enchufe para conectar estas extensiones y coordinar su colaboración. Esta arquitectura es empleada por motores de videojuegos y sistemas operativos.
 8. **Arquitectura de Reflexión**: La arquitectura de Reflexión proporciona un mecanismo para cambiar la estructura y el comportamiento de los sistemas de software de manera dinámica. Apoya la modificación de aspectos fundamentales, como estructuras de tipo y mecanismos de llamada a funciones. En este patrón, una aplicación se divide en dos niveles. Un nivel meta que proporciona información sobre propiedades seleccionadas del sistema y hace que el software sea autoconsciente, y un nivel base que incluye la lógica de la aplicación. Su implementación se basa en el nivel meta. Los cambios en la información mantenida en el nivel meta afectan el comportamiento del nivel base subsecuente.
-9. **Arquitectura de Repositorio**: Consta de multiples elementos funcionales, denominados agentes, y un instrumento de control denominado pizarra. Los agentes suelen estar especializados en una tarea concreta o elemental. El comportamiento basico de cualquier agente consiste en examinar la pizarra realizar su tarea y escribir sus conclusiones en la misma pizarra. Es util cuando el problema a resolver es extremadamente complejo en terminos cognitivos. Es decir, cuando el flujo de control del algoritmo es enrevesado, o simplemente, no se tiene un conocimiento del completo.
+9. **Arquitectura de Repositorio**: Consta de múltiples elementos funcionales, denominados agentes, y un instrumento de control denominado pizarra. Los agentes suelen estar especializados en una tarea concreta o elemental. El comportamiento básico de cualquier agente consiste en examinar la pizarra realizar su tarea y escribir sus conclusiones en la misma pizarra. Es útil cuando el problema a resolver es extremadamente complejo en términos cognitivos. Es decir, cuando el flujo de control del algoritmo es enrevesado, o simplemente, no se tiene un conocimiento del completo.
+10. **Arquitectura Cliente-Servidor**: Uno de los estilos arquitectónicos distribuidos mas conocidos, el cual esta compuesto por dos componentes, el proveedor y el consumidor. El proveedor es un servidor que brinda una serie de servicios o recursos los cuales son consumidos por el cliente.
 
 Estos patrones arquitectónicos proporcionan un marco de referencia para diseñadores y desarrolladores, permitiendo la creación de sistemas de software robustos, eficientes y fáciles de mantener. Cada patrón tiene su lugar y utilidad en determinadas situaciones, entender sus fortalezas y limitaciones es clave para implementar la solución más efectiva.
