--- a/4º Año/Metodologia de Sistemas II/Unidad 2/1. Los Requerimientos.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 2/1. Los Requerimientos.md
@@ -39,7 +39,7 @@ Las características que debe tener un buen requerimiento está definido en su e
 El Análisis de Requerimientos es un proceso al cual Sommerville, llama ***Ingeniería de Requerimientos*** cuya meta es crear y mantener un documento de requerimientos del sistema. Este proceso general consta de cuatro subprocesos:
 
 - ***El estudio de viabilidad***, que evalúa si el sistema contribuye con los objetivos de la organización, y por ende es útil para el negocio. Por lo general, este proceso suele ser corto, y cuyo resultado es un informe que nos sirve para determinar si un requerimiento es adecuado o necesita cambios. 
-- ***Obtención y análisis de requerimientos***, cosiste en captar las necesidades de los distintos usuarios que utilizaran el sistema final.
+- ***Obtención y análisis de requerimientos***, consiste en captar las necesidades de los distintos usuarios que utilizaran el sistema final.
 - ***Especificación de requerimientos***, consiste en la transformación de los requerimientos en formularios estándar que definen, de forma completa, precisa y verificable, los requisitos, el diseño y el comportamiento u otras características, de un sistema o componente de un sistema. Una buena especificación de requerimientos debe procurar:
 	1. **Separar funcionalidad de implementación**: Una especificación es una descripción de lo que se desea, en vez de cómo se realiza. Esto en la práctica puede llegar a no suceder del todo; sin embargo, es un buen lineamiento a seguir.
 	2. **Una especificación debe abarcar el entorno en el que el sistema opera**: El entorno en el que opera el sistema y con el que interactúa debe ser especificado.
