Moviendo cositas | MS II

--- a/4º Año/Metodologia de Sistemas II/Unidad 2/1. Los Requerimientos.md
+++ b/4º Año/Metodologia de Sistemas II/Unidad 2/1. Los Requerimientos.md
@@ -48,11 +48,6 @@ El Análisis de Requerimientos es un proceso al cual Sommerville, llama ***Ingen
 	- Asegurar que los ingenieros de software los han comprendido.
 	- Garantizar que el documento de especificación de requerimientos de software es comprensible, consistente, completo y conforme a los estándares establecidos.
 	- Asegurar que el documento de especificación de requerimientos define el software adecuado, que espera el usuario.
-	- Las principales técnicas de validación:
-		- Revisiones: Un grupo de personas lee, analiza, discute el documento de SRS y las formas de solucionar los problemas detectados, es por esta razón que deben participar representantes del cliente y los usuarios.
-		- Prototipado: Se crean versiones del producto y se los da a testear al cliente para recibir una retroalimentación temprana.
-		- Validación de Modelos.
-		- Pruebas de Aceptación.
 
 >[!tldr] Validación de Requerimientos
 >A la hora de validar un requerimiento se debe realizar las siguientes comprobaciones:
@@ -61,12 +56,18 @@ El Análisis de Requerimientos es un proceso al cual Sommerville, llama ***Ingen
 >- **Completitud**. Están incluidas todas las funciones requeridas por el usuario.
 >- **Realismo**. Los requerimientos pueden ser implementados con el presupuesto y tecnologías disponibles.
 >- **Verificable**. Los requerimientos pueden ser verificados
+>
+>Las principales técnicas para la validación de los requerimientos son las siguientes:
+>- Revisiones: Un grupo de personas lee, analiza, discute el documento de SRS y las formas de solucionar los problemas detectados, es por esta razón que deben participar representantes del cliente y los usuarios.
+>- Prototipado: Se crean versiones del producto y se los da a testear al cliente para recibir una retroalimentación temprana.
+>- Validación de Modelos.
+>- Pruebas de Aceptación.
 
 La Gestión de Requerimientos implica la recolección, almacenamiento y mantenimiento de grandes cantidades de información. Para ello existen herramientas CASE con base de datos para almacenar requerimientos, además de brindar facilidades de análisis y generación de documentos, facilidades de gestión de cambios y facilidades de trazabilidad.
 
 ## Requerimientos y Restricciones
 
- Los requerimientos de un sistema se pueden dividir en requerimientos funcionales y no funcionales. Los ***requerimientos funcionales*** describen las interacciones entre el sistema y su ambiente, describen cómo debe comportarse el sistema ante determinado estímulo, es decir, describen lo que el sistema debe hacer. Por otro lado, los ***requerimientos no funcionales***, establecen límites y restricciones al sistema, apoyando las funcionalidades de este mismo. Son las propiedades o características que el producto debe tener, por ejemplo, Apariencia y sensación, Usabilidad, Performance, Operatividad, entre otras.
+ Los requerimientos de un sistema se pueden dividir en requerimientos funcionales y no funcionales. Los ***requerimientos funcionales*** describen las interacciones entre el sistema y su ambiente, describen cómo debe comportarse el sistema ante determinado estímulo, es decir, describen lo que el sistema debe hacer. Por otro lado, los ***requerimientos no funcionales***, establecen límites y restricciones al sistema, apoyando las funcionalidades de este mismo. Son las propiedades o características que el producto debe tener, por ejemplo, Apariencia, Usabilidad, Performance, Operatividad, entre otras.
 
 #### Restricciones Globales
 
